--- a/chatgpt_cdk/package.json
+++ b/chatgpt_cdk/package.json
@@ -26,9 +26,12 @@
     "@aws-sdk/client-ssm": "^3.428.0",
     "@aws-sdk/lib-storage": "^3.454.0",
     "@types/aws-lambda": "^8.10.122",
+    "@types/busboy": "^1.5.3",
     "aws-cdk-lib": "^2.99.1",
     "constructs": "^10.2.70",
+    "lambda-multipart-parser": "^1.0.1",
     "openai": "^4.11.0",
+    "querystring": "^0.2.1",
     "source-map-support": "^0.5.21"
   }
 }
