--- a/chatgpt_cdk/package.json
+++ b/chatgpt_cdk/package.json
@@ -28,6 +28,8 @@
     "@types/aws-lambda": "^8.10.122",
     "@types/busboy": "^1.5.3",
     "aws-cdk-lib": "^2.99.1",
+    "aws-multipart-parser": "^0.2.1",
+    "busboy": "^1.6.0",
     "constructs": "^10.2.70",
     "lambda-multipart-parser": "^1.0.1",
     "openai": "^4.11.0",
